--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,9 @@
   font-family: "Poppins", sans-serif;
 }
 
-body {
+/* body {
   background-image: url("/assets/bg/pattern-1.png");
-}
+} */
 
 /* Navigation bar and menu list styling */
 .navigation-menu {
@@ -412,9 +412,85 @@ body {
   color: #0092ff;
 }
 
+/* About Us section styling */
+
+.aboutus-sect {
+  width: 100%;
+  padding: 115px 0 82px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.fixed-img {
+  z-index: -1;
+  position: absolute;
+  top: 1;
+  left: 1200px;
+}
+.fixed-img img {
+  width: 500px;
+  animation: pulse 4s infinite;
+}
+.aboutus-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.aboutus-col {
+  max-width: 600px;
+  margin: 0 0 30px;
+  padding: 0 12px;
+}
+.txt-contain {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.about-heading {
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+  margin: 0;
+  color: #0092ff;
+  font-weight: 600;
+  letter-spacing: 0.8rem;
+}
+.txt-contain h2 {
+  font-size: 36px;
+  font-family: "Inter", sans-serif;
+  margin: 15px 0 0;
+  font-weight: 700;
+}
+.txt-contain p {
+  font-size: 16px;
+  color: #393939;
+  margin: 15px 0 50px;
+}
+.aboutus-btn {
+  margin: 5px 0 0;
+}
+.aboutus-btn a {
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+  text-decoration: none;
+  background: linear-gradient(to bottom, #fff 50%, #0092ff 50%);
+  background-size: 100% 200%;
+  background-position: 0% 100%;
+  font-weight: 500;
+  padding: 18px 40px;
+  border-radius: 30px;
+  color: #fff;
+  cursor: pointer;
+  transition: all 0.4s ease;
+  border: 1px solid #fff;
+}
+.aboutus-btn a:hover {
+  color: #0092ff;
+  background-position: 0% 0%;
+}
+
 @media screen and (max-width: 1600px) {
   .auto-container {
-    width: 100%;
+    width: 90%;
     margin: 0 120px;
     padding: 0 12px;
   }
@@ -433,6 +509,13 @@ body {
   .cards {
     display: flex;
     flex-wrap: wrap;
+  }
+  .aboutus-col {
+    max-width: 450px;
+  }
+  .fixed-img {
+    position: absolute;
+    left: 60%;
   }
 }
 
@@ -494,6 +577,7 @@ body {
     display: block;
     margin: 10px;
   }
+  
 }
 
 @media screen and (max-width: 1048px) {
@@ -530,6 +614,19 @@ body {
   }
   .sidebar {
     width: 250px;
+  }
+  .aboutus-row {
+    flex-direction: column;
+  }
+  .txt-contain h2 {
+    font-size: 24px;
+  }
+  .txt-contain p {
+    font-size: 12px;
+  }
+  .aboutus-btn a{
+    padding: 10px 12px;
+    font-size: 12px;
   }
 }
 
@@ -617,5 +714,12 @@ body {
   .cards {
     display: block;
     margin: 20px;
+  }
+  .aboutus-row {
+    flex-direction: column;
+  }
+  .fixed-img {
+    width: 250px;
+    left: 100px;
   }
 }
