--- a/css/style.css
+++ b/css/style.css
@@ -308,7 +308,7 @@
 
 .services-sect {
   position: relative;
-  height: 100vh;
+  /* height: 100vh; */
   background-color: #f3f4f5;
   display: flex;
   justify-content: center;
@@ -472,7 +472,7 @@
   font-size: 16px;
   font-family: "Roboto", sans-serif;
   text-decoration: none;
-  background: linear-gradient(to bottom, #fff 50%, #0092ff 50%);
+  background: linear-gradient(to bottom, #f3f4f5 50%, #0092ff 50%);
   background-size: 100% 200%;
   background-position: 0% 100%;
   font-weight: 500;
@@ -481,7 +481,7 @@
   color: #fff;
   cursor: pointer;
   transition: all 0.4s ease;
-  border: 1px solid #fff;
+  border: 1px solid #f3f4f5;
 }
 .aboutus-btn a:hover {
   color: #0092ff;
@@ -556,6 +556,9 @@
   .sidebar {
     display: block;
     width: 250px;
+  }
+  .home-page {
+    height: auto;
   }
   .services-sect {
     position: relative;
