--- a/css/style.css
+++ b/css/style.css
@@ -350,6 +350,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: stretch;
   max-height: max-content;
   background: linear-gradient(to left, #fff 50%, #0092ff 50%) right;
   background-size: 200%;
@@ -610,7 +611,7 @@
   overflow: hidden;
 }
 .gradient-text p {
-  text-align: left; 
+  text-align: left;
   font-size: 14px;
   border-top: 1px solid #5e6576;
 }
@@ -638,8 +639,69 @@
   justify-content: space-around;
   align-items: center;
 }
-.team-col img{
+.team-col {
+  padding: 0 12px;
+  margin: 0 0 30px;
+}
+.team-img {
   width: 270px;
+  border-radius: 30px;
+}
+.team-content {
+  padding: 20px 0 0;
+}
+.member-name {
+  text-decoration: none;
+  font-size: 24px;
+  font-weight: 600;
+  font-family: "Inter", sans-serif;
+  color: #1d2c38;
+}
+.team-content p {
+  font-size: 14px;
+  margin: 5px 0 0;
+  color: #000;
+  font-family: "Roboto", sans-serif;
+}
+.team-image-div {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  border-radius: 30px;
+}
+.team-image-div::before {
+  content: "";
+  position: absolute;
+  top: 100%;
+  width: 100%;
+  height: 100%;
+  background-color: #0092ff;
+  transition: top 0.6s ease;
+  pointer-events: none;
+  opacity: 1;
+}
+.team-image-div:hover::before {
+  top: 80%;
+}
+.hover-social-menu {
+  position: absolute;
+  top: 100%; /* Start hidden */
+  width: 100%;
+  height: 100%;
+  color: #fff;
+  white-space: nowrap;
+  overflow: hidden;
+  transition: top 0.6s ease; /* Add animation transition */
+}
+
+.team-image-div:hover .hover-social-menu {
+  top: 80%; /* Move up with animation */
+}
+
+.team-image-div i {
+  font-size: 24px;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 1600px) {
@@ -898,5 +960,28 @@
   .fixed-img {
     width: 250px;
     left: 100px;
+  }
+  .team-row {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .team-col {
+    width: fit-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+  }
+  .team-image-div {
+    width: fit-content;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .team-content {
+    align-items: flex-start;
   }
 }
