--- a/css/style.css
+++ b/css/style.css
@@ -340,7 +340,6 @@
   background-color: #5e6576 !important;
 }
 .owl-dots span::before {
-  
 }
 .owl-dots button.owl-dot.active span {
   background-color: #0092ff !important;
@@ -348,7 +347,7 @@
   width: 12px;
   height: 12px;
   top: 1px;
-  left:1px;
+  left: 1px;
   transition: all 0.2s ease;
 }
 
@@ -741,8 +740,110 @@
   cursor: pointer;
 }
 
+/* Footer styling  */
+.footer-main {
+  background-color: #1d2c38;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+.main-footer-widgets {
+  padding: 116px 0 110px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.footer-col {
+  display: flex;
+  flex-direction: column;
+}
+.footer-col > * {
+  flex: 1;
+}
+.footer-title {
+  font-size: 20px;
+  font-family: "Inter", sans-serif;
+  font-weight: 500;
+  color: #fff;
+  margin: 0 0 20px;
+}
+.footer-text {
+  font-size: 14px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  margin: 0 0 25px;
+  color: #fff;
+}
+.form-group {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+.form-group input {
+  padding: 10px 15px 10px 30px;
+  border-radius: 30px;
+  background: transparent;
+  color: #fff;
+  border: 2px solid #223150;
+}
+.fa-arrow-right.email-arrow {
+  color: #0092ff;
+  border: 2px solid #223150;
+  padding: 15px;
+  border-radius: 50%;
+  margin-left: 20px;
+}
+.footer-privacy {
+  color: #fff;
+  font-size: 14px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 100;
+  margin: 35px 0 0;
+}
+.footer-widget-links {
+  padding: 0 0 0 63px;
+}
+.main-footer-list {
+  font-size: 14px;
+  font-family: 'Roboto', sans-serif;
+  padding: 0;
+}
+.main-footer-list li {
+  list-style: none;
+  margin: 0 0 15px;
+}
+.main-footer-list li a {
+  text-decoration: none;
+  font-size: 16px;
+  color: #fff;
+  font-weight: 300;
+}
 
+.blue-footer {
+  color: #0092ff;
+  font-size: 14px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 600;
+}
 
+.copyright-foot {
+  width: 100%;
+  padding: 20px 0;
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.footer-copyright-text {
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 @media screen and (max-width: 1600px) {
   .auto-container {
@@ -775,6 +876,11 @@
   .fixed-img {
     position: absolute;
     left: 60%;
+  }
+  .main-footer-widgets {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
   }
 }
 
@@ -1023,5 +1129,20 @@
   }
   .team-content {
     align-items: flex-start;
+  }
+  .main-footer-widgets {
+    width: 100%;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+  }
+  .footer-col {
+    flex-wrap: nowrap;
+    width: 100%;
+    padding: 0 12px;
+    justify-content: flex-start;
+  }
+  .footer-widget-links {
+    padding: 0;
   }
 }
