--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,15 @@ body {
 /* body {
   background-image: url("/assets/bg/pattern-1.png");
 } */
+.sidebar-closer {
+  display: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: red;
+  z-index: 8;
+}
+
 
 /* Navigation bar and menu list styling */
 .navigation-menu {
@@ -86,13 +95,13 @@ body {
   border-bottom: 2px solid #0092ff;
 }
 .quote-btn a {
-  font-size: 14px;
+  font-size: 16px;
   font-family: "Roboto", sans-serif;
   text-decoration: none;
   background: linear-gradient(to bottom, #0092ff 50%, #fff 50%);
   background-size: 100% 200%;
   background-position: 0% 100%;
-  font-weight: 500;
+  font-weight: 700;
   padding: 8px 12px;
   border-radius: 30px;
   color: #0092ff;
@@ -971,6 +980,13 @@ body {
 }
 
 @media screen and (max-width: 1248px) {
+  .sidebar-closer {
+    position: fixed;
+    top: 7%;
+    left: 250px;
+    display: block;
+    opacity: 0.2;
+  }
   .auto-container {
     width: 100%;
     margin: 0 160px;
