--- a/css/about.css
+++ b/css/about.css
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: center;
   background: none;
+  height: 60vh;
 }
 
 .navigation-menu {
@@ -112,7 +113,7 @@
   text-decoration: none;
   font-size: 16px;
   color: #fff;
-  font-weight: 500;
+  font-weight: 700;
   font-family: 'Roboto', sans-serif;
   margin: 0 15px 0 0;
 }
@@ -136,4 +137,238 @@
 }
 .email-header span::after {
   content: ":";
+}
+.email-header a {
+  color: #ffffffb3;
+  text-decoration: none;
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
+  transition: all 0.3s ease;
+}
+.email-header a:hover {
+  color: #0037ff;
+}
+.header-top-social {
+  margin: 0 0 0 60px;
+}
+.header-top-social a {
+  text-decoration: none;
+  font-size: 16px;
+  color: #ffffffb3;
+  margin: 0 0 0 5px;
+}
+.about-section {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 115px 0 5px;
+}
+.about-sect-row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.about-sect-col {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 0 30px;
+  padding: 0 12px;
+  max-width: 550px;
+  flex: 1;
+}
+.about-one-title {
+  font-size: 14px;
+  color: #0092ff;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 0.8rem;
+}
+.text-contain-s h3 {
+  font-size: 32px;
+  color: #1d2c38;
+  font-weight: 700;
+  font-family: 'Inter', sans-serif;
+  margin: 15px 0 0;
+}
+.about-one-text {
+  color: #393939;
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
+  margin: 15px 0 50px;
+}
+.about-clear-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.about-clear-col {
+  display: block;
+  margin: 0 0 30px;
+  padding: 0 12px;
+}
+.about-clear-col i {
+  font-size: 60px;
+  color: #0092ff;
+  transition: all 0.3s ease;
+}
+.about-clear-col i:hover {
+  transform: scale(1.02);
+  animation: bounceIn 800ms linear;
+}
+
+.about-clear-col h6 {
+  font-size: 18px;
+  text-wrap: nowrap;
+  color: #2c2c71;
+  font-weight: 700;
+  font-family: 'Inter', sans-serif;
+  margin: 20px 0 0;
+}
+.about-one-block-text {
+  font-size: 16px;
+  color: #393939;
+  margin: 20px 0 0;
+  font-family: 'Roboto', sans-serif;
+}
+.btn.btn-primary.more-about-btn {
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+  color: #0092ff;
+  background: linear-gradient(to bottom, #0092ff 50%, #fff 50%);
+  background-size: 100% 200%;
+  background-position: 0% 100%;
+  border: 1px solid #0092ff;
+  transition: all 0.3s ease;
+  padding: 18px 40px;
+  border-radius: 30px;
+}
+.btn.btn-primary.more-about-btn:hover {
+  color: #fff;
+  background-position: 0% 0%;
+}
+.img-content-inner {
+  padding: 0 70px 0 0;
+}
+.img-contents {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.about-counter {
+  transform: rotate(-90deg);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-items: center;
+}
+.about-counter h3 {
+  font-size: 52px;
+  color: #1d2c38;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+}
+.about-counter p {
+  font-size: 14px;
+  text-wrap: nowrap;
+  color: #0092ff;
+  font-family: 'Roboto', sans-serif;
+  margin: 5px 0 0;
+  font-weight: 600;
+}
+.about-3-img {
+  width: auto;
+  border: 2px solid #0092ff;
+  border-radius: 30px;
+  padding: 0 10px 10px 0;
+  margin: 0 0 5px;
+}
+.about-3 {
+  width: auto;
+  border-radius: 30px;
+  padding: 0 12px;
+  margin: 0 0 30px 0;
+}
+
+.about-img-hover {
+  background: linear-gradient(to right, #0092ff 0%, #5e6576 100%);
+}
+
+.about-4 {
+  padding: 0 12px;
+  margin: 10px 0 0 0;
+  border-radius: 30px;
+}
+
+.sponcers-sect {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 155px 0 0;
+}
+.sponcers {
+  padding: 0 0 40px;
+}
+
+@media screen and (max-width: 1400px) {
+  .auto-container {
+    margin: 0 100px;
+    padding: 0 12px;
+  }
+  .header-top-social {
+    margin: 0 0 0 20px;
+  }
+}
+
+@media  screen and (max-width: 1320px) {
+  .auto-container {
+    margin: 0 50px;
+  }
+  .text-contain-s {
+    max-width: 350px;
+  }
+  .text-contain-s h3 {
+    font-size: 24px;
+  }
+  .text-contain-s .about-one-text {
+    font-size: 14px;
+  }
+  .about-clear-col h6 {
+    font-size: 16px;
+  }
+  .about-clear-col .about-one-block-text {
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 1248px) {
+  .auto-container {
+    margin: 0;
+    padding: 0 12px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .header-top {
+    display: none;
+  }
+  .about-sect-row {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .about-clear-row {
+    flex-direction: column;
+  }
+  .text-contain-s {
+    max-width: 350px;
+    margin-top: 40px;
+  }
 }
