--- a/css/about.css
+++ b/css/about.css
@@ -114,7 +114,7 @@
   font-size: 16px;
   color: #fff;
   font-weight: 700;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   margin: 0 15px 0 0;
 }
 
@@ -130,9 +130,9 @@
   justify-content: space-between;
   align-items: center;
 }
-.email-header span{
+.email-header span {
   font-size: 16px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 600;
 }
 .email-header span::after {
@@ -142,7 +142,7 @@
   color: #ffffffb3;
   text-decoration: none;
   font-size: 16px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   transition: all 0.3s ease;
 }
 .email-header a:hover {
@@ -182,7 +182,7 @@
 .about-one-title {
   font-size: 14px;
   color: #0092ff;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 600;
   text-transform: uppercase;
   letter-spacing: 0.8rem;
@@ -191,13 +191,13 @@
   font-size: 32px;
   color: #1d2c38;
   font-weight: 700;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   margin: 15px 0 0;
 }
 .about-one-text {
   color: #393939;
   font-size: 16px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   margin: 15px 0 50px;
 }
 .about-clear-row {
@@ -215,7 +215,7 @@
   color: #0092ff;
   transition: all 0.3s ease;
 }
-.about-clear-col i:hover {
+.icon-div:hover i{
   transform: scale(1.02);
   animation: bounceIn 800ms linear;
 }
@@ -225,18 +225,18 @@
   text-wrap: nowrap;
   color: #2c2c71;
   font-weight: 700;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   margin: 20px 0 0;
 }
 .about-one-block-text {
   font-size: 16px;
   color: #393939;
   margin: 20px 0 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 .btn.btn-primary.more-about-btn {
   font-size: 16px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 700;
   color: #0092ff;
   background: linear-gradient(to bottom, #0092ff 50%, #fff 50%);
@@ -270,14 +270,14 @@
 .about-counter h3 {
   font-size: 52px;
   color: #1d2c38;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 700;
 }
 .about-counter p {
   font-size: 14px;
   text-wrap: nowrap;
   color: #0092ff;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   margin: 5px 0 0;
   font-weight: 600;
 }
@@ -310,10 +310,159 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 40px;
   padding: 155px 0 0;
 }
 .sponcers {
   padding: 0 0 40px;
+  border-bottom: 2px solid #f3f4f5;
+}
+
+.services-tab {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 80px 0 60px;
+}
+.features-one {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.feature-row {
+  width: fit-content;
+  background-color: #0092ff;
+  display: flex;
+  flex-wrap: wrap;
+  border-radius: 20px;
+}
+
+.grid-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  padding: 45px 30px;
+  width: 200px;
+  height: 230px;
+  color: #f3f4f5;
+  font-weight: 500;
+  cursor: pointer;
+  flex: 1;
+  transition: all 0.4s ease;
+  border-left: 1px solid #ccc; /* Add a left border */
+  border-right: 1px solid #ccc; /* Add a right border */
+}
+.grid-item:hover {
+  background-color: #43a9f7;
+}
+.grid-item:first-child:hover {
+  border-radius: 20px 0 0 20px;
+}
+.grid-item:last-child:hover {
+  border-radius: 0 20px 20px 0px;
+}
+.grid-item:first-child {
+  border-left: none;
+  border-radius: 20px 0 0 20px; /* Remove left border for the first item */
+}
+.grid-item:last-child {
+  border-right: none;
+  border-radius: 0 20px 20px 0px;
+}
+.grid-item i {
+  font-size: 54px;
+  transition: all 0.3s ease;
+}
+.grid-item h6 {
+  font-size: 18px;
+  margin: 20px 0 0;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+}
+.grid-item:hover i {
+  transform: rotateX(50deg) scale(1.2);
+  animation: FadeIn 0.9s linear;
+}
+.testimonials-sect {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f3f4f5;
+  padding: 155px 0 80px;
+  margin-top: 100px;
+}
+.clients-row {
+  margin-top: 100px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+.clients-col {
+  margin: 25px;
+}
+.client-card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  max-width: 370px;
+}
+.upper-part {
+  padding: 0 30px 30px;
+  padding-top: 40px;
+  border-radius: 20px 20px 0 0;
+  background-color: #fff;
+}
+.upper-part .quote-text {
+  font-size: 24px;
+  font-family: "Roboto", sans-serif;
+  margin: 20px 0 0;
+}
+.profile-pic {
+  position: absolute;
+  top: -18%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
+  border-radius: 50%;
+  background-color: #fff;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+}
+.quote-symbol {
+  position: absolute;
+  top: -20%;
+  left: 38%;
+  z-index: 1;
+}
+.quote-symbol i {
+  font-size: 32px;
+  color: #0092ff;
+}
+.lower-part {
+  display: block;
+  text-align: center;
+  border-top: 1px solid #ccc;
+  background-color: #fff;
+  border-radius: 0 0 20px 20px;
+  padding: 25px 15px;
+}
+.lower-part h6 {
+  font-size: 18px;
+  font-family: "Inter", sans-serif;
+  font-weight: 600;
+  margin: 0;
+  color: #1d2c38;
+}
+.lower-part .quote-div {
+  font-size: 14px;
+  font-family: "Inter", sans-serif;
+  color: #393939;
 }
 
 @media screen and (max-width: 1400px) {
@@ -326,7 +475,7 @@
   }
 }
 
-@media  screen and (max-width: 1320px) {
+@media screen and (max-width: 1320px) {
   .auto-container {
     margin: 0 50px;
   }
@@ -352,6 +501,12 @@
     margin: 0;
     padding: 0 12px;
   }
+  .clients-row {
+    flex-direction: column;
+  }
+  .clients-col {
+    margin-top: 100px;
+  }
 }
 
 @media screen and (max-width: 1024px) {
@@ -370,5 +525,8 @@
   .text-contain-s {
     max-width: 350px;
     margin-top: 40px;
+  }
+  .feature-row {
+    display: block;
   }
 }
