--- a/css/about.css
+++ b/css/about.css
@@ -142,6 +142,7 @@
   color: #ffffffb3;
   text-decoration: none;
   font-size: 16px;
+  font-weight: 500;
   font-family: "Roboto", sans-serif;
   transition: all 0.3s ease;
 }
@@ -154,8 +155,14 @@
 .header-top-social a {
   text-decoration: none;
   font-size: 16px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 600;
   color: #ffffffb3;
   margin: 0 0 0 5px;
+  transition: all 0.3s ease;
+}
+.header-top-social a:hover {
+  color: #fff;
 }
 .about-section {
   width: 100%;
@@ -512,6 +519,10 @@
 @media screen and (max-width: 1024px) {
   .header-top {
     display: none;
+  }
+  .navigation-menu {
+    top: 0;
+    position: absolute;
   }
   .about-sect-row {
     display: flex;
