--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: red;
+  /* background-color: red; */
   z-index: 8;
 }
 
