--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
 .sidebar-closer {
   display: none;
   position: absolute;
-  width: 100%;
+  right: 0;
   height: 100%;
   /* background-color: red; */
   z-index: 8;
@@ -195,6 +195,16 @@ body {
   transition: all 0.3s ease;
 }
 
+.home-owl {
+  margin-top: 100px;
+  display: flex;
+  justify-content: space-between;
+}
+.owl-carousel .owl-stage {
+  display: flex;
+  align-items: center;
+}
+
 /* Side bar styling  */
 
 .sidebar {
@@ -265,7 +275,7 @@ body {
 
 .home-row {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   /* z-index: 1; */
 }
@@ -274,7 +284,7 @@ body {
   padding: 0 12px;
   box-sizing: border-box;
   flex: 1;
-  max-width: fit-content;
+  max-width: max-content;
 }
 .h1-large {
   font-size: 102px;
@@ -379,7 +389,7 @@ body {
   /* height: 100vh; */
   background-color: #f3f4f5;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   width: 100%;
   padding: 145px 0 120px;
@@ -397,17 +407,25 @@ body {
   color: #000;
 }
 .services-card {
+  width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-content: center;
 }
-
+.service-owl {
+  display: flex;
+  flex: 1;
+  height: auto;
+  align-items: center;
+}
 .cards {
   display: flex;
   flex-direction: column;
+  flex: 1;
   justify-content: space-between;
-  align-items: stretch;
-  max-height: max-content;
+  align-items: flex-start;
+  width: 500px;
+  height: 420px;
   background: linear-gradient(to left, #fff 50%, #0092ff 50%) right;
   background-size: 200%;
   border-radius: 20px;
@@ -899,56 +917,77 @@ body {
 }
 .contact-row {
   display: flex;
-  flex: 1;
   flex-wrap: wrap;
-  justify-content: space-around;
-  align-items: center;
-}
-.contact-col {
-  display: flex;
-  flex: 1;
-  flex-direction: column;
-  min-width: 350px;
-  padding: 0 12px;
-  margin: 0 0 30px;
-}
-.inner-info {
-  padding: 45px 15px;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 30px;
-}
-.contact-phone-icon {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 0 25px;
-}
-.contact-phone-icon i {
-  font-size: 50px;
-  color: #0092ff;
-}
-.contact-detail {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin: 20px 0 0;
-}
-.contact-detail a {
-  text-decoration: none;
-  font-size: 24px;
-  font-family: "Roboto", sans-serif;
-  text-align: justify;
-  color: #1d2c38;
-  font-weight: 600;
-}
-.contact-text {
-  display: flex;
   justify-content: center;
   align-content: center;
-  font-size: 16px;
-  font-family: "Roboto", sans-serif;
 }
+.contact-col {
+  margin: 15px 15px;
+  background-color: #fff;
+  border-radius: 20px;
+  border: 1px solid #0092ff;
+  transition: all 0.3s ease;
+}
+.upper-contact img {
+  width: 300px;
+  border-radius: 20px;
+  border-bottom: 1px solid #0092ff;
+}
+.lower-contact {
+  padding: 35px 30px 42px;
+}
+
+.lower-contact h5 {
+  margin-bottom: 20px;
+}
+.lower-contact h5 a {
+  text-decoration: none;
+  font-size: 24px;
+  font-weight: 700;
+  font-family: "Roboto", sans-serif;
+  color: #1d2c38;
+  transition: all 0.3s ease;
+}
+.lower-contact h5 a:hover {
+  color: #0092ff;
+  border-bottom: 2px solid #172530;
+  cursor: pointer;
+}
+.lower-contact p {
+  font-size: 14px;
+  font-family: "Inter", sans-serif;
+  font-weight: 500;
+  color: #393939;
+  margin-bottom: 5px;
+  transition: all 0.4s ease;
+}
+.lower-contact p:hover {
+  color: #0092ff;
+  cursor: pointer;
+}
+.lower-contact p span {
+  margin-left: 10px;
+}
+.contact-us {
+  margin-top: 30px;
+}
+.contact-us a {
+  font-size: 18px;
+  color: #0092ff;
+  font-weight: 700;
+  font-family: "Inter", sans-serif;
+  text-decoration: none;
+  border-bottom: 2px solid #1d2c38;
+  padding-bottom: 5px;
+  transition: all 0.3s ease;
+}
+.contact-us a:hover {
+  color: #1d2c38;
+  border-bottom: 2px solid #0092ff;
+  border-radius: 20px;
+  padding: 10px;
+}
+
 .company-loaction {
   width: 100%;
   margin: 50px 0;
@@ -991,7 +1030,7 @@ body {
   font-size: 24px;
   text-transform: uppercase;
   letter-spacing: 0.8em;
-  font-family: 'Inter',  sans-serif;
+  font-family: "Inter", sans-serif;
   font-weight: 700;
 }
 .tech-row {
@@ -1025,7 +1064,7 @@ body {
   margin-top: 20px;
   font-size: 24px;
   color: #1d2c38;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 700;
 }
 @media screen and (max-width: 1800px) {
@@ -1056,7 +1095,7 @@ body {
   }
   .cards {
     display: flex;
-    flex-wrap: wrap;
+    height: auto;
   }
   .aboutus-col {
     max-width: 450px;
@@ -1077,7 +1116,8 @@ body {
 @media screen and (max-width: 1248px) {
   .sidebar-closer {
     position: fixed;
-    top: 7%;
+    top: 10%;
+    right: 0;
     left: 250px;
     display: block;
     opacity: 0.2;
@@ -1162,12 +1202,13 @@ body {
     font-size: 72px;
   }
   .services-card {
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
+    flex: 1;
     margin: 10px;
   }
   .cards {
-    display: block;
     margin: 10px;
   }
   .tech-row {
@@ -1232,17 +1273,16 @@ body {
   .gallery-title-head {
     font-size: 34px;
   }
-  .contact-row {
-    flex-direction: column;
-    flex-wrap: nowrap;
-  }
 }
 
 @media screen and (max-width: 768px) {
   .auto-container {
     width: 100%;
-    margin: 0 20px;
+    margin: 0;
     padding: 0 12px;
+  }
+  .home-owl {
+    margin-top: 50px;
   }
   .menu-list {
     display: none;
