--- a/css/about.css
+++ b/css/about.css
@@ -76,7 +76,8 @@
 }
 .title-abt {
   margin: 0;
-  font-size: 82px;
+  font-size: 72px;
+  text-transform: capitalize;
   color: #fff;
   font-family: "Inter", sans-serif;
   font-weight: 700;
