--- a/css/style.css
+++ b/css/style.css
@@ -989,20 +989,21 @@ body {
 }
 
 .company-loaction {
-  width: 100%;
-  margin: 50px 0;
-  position: relative;
-  overflow: hidden;
-  padding-top: 56.25%;
+  margin-top: 60px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
 }
-.company-loaction iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border: 0; /* Remove iframe border if needed */
+.company-loaction .iframe-container {
+  margin-top: 60px;
+  padding: 20px;
 }
+.iframe-container iframe {
+  max-width: 1000px;
+}
+
+
 /* .service-li {
   position: relative;
 }
@@ -1438,5 +1439,12 @@ body {
   .contact-detail a {
     font-size: 18px;
   }
-
+  .iframe-container {
+    padding: 0;
+    margin-top: 20px;
+  }
+  .iframe-container iframe {
+    width: 360px;
+    height: 250px;
+  }
 }
