--- a/css/projects.css
+++ b/css/projects.css
@@ -42,7 +42,7 @@
   left: -100%;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to right, #0092ff 0%, #5e6576 100%);
+  background: linear-gradient(to right, #0092ff 0%, #ccc 100%);
   transition: left 0.6s ease;
   pointer-events: none;
   opacity: 0.6;
@@ -69,7 +69,6 @@
   height: 100%;
   transition: left 0.6s ease;
 }
-
 
 .projects-overlay a {
   background-color: #0092ff;
