--- a/css/collapse.css
+++ b/css/collapse.css
@@ -3,6 +3,34 @@
   overflow: hidden;
   transition: height 0.3s ease-in-out;
 }
+/* #toggle-service {
+  padding-right: 10px;
+}
+
+#toggle-service::after {
+  content: "";
+  font-size: 18px;
+  font-weight: 700;
+  margin-left: 80px;
+  margin-bottom: 15px;
+  text-align: center;
+} */
+#toggle-service {
+  position: relative;
+}
+.serv-arrow {
+  position: absolute;
+  top: 35%;
+  left: 70%;
+  font-size: 14px;
+  text-align: right;
+  margin-left: 100px;
+  transition: transform 0.3s ease-in-out;
+}
+.serv-arrow.active {
+  transform: rotateZ(90deg);
+}
+
 #menu.active {
   height: 270px;
 }
