--- a/css/style.css
+++ b/css/style.css
@@ -262,6 +262,9 @@ body {
   background-color: #0092ff;
   color: #fff;
 }
+.service-li {
+  position: relative;
+}
 
 .sidemenu-btn {
   display: none;
@@ -277,6 +280,8 @@ body {
   margin: 6px 0;
   transition: 0.4s;
 }
+
+
 
 /* Home Page Styling */
 .home-page {
